--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v1
@@ -31,30 +31,30 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest ./course-swap-backend
           docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
 
-      - name: Set up Docker secrets on EC2
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            set -e
-            # Disable strict host key checking
-            mkdir -p ~/.ssh
-            echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+      # - name: Set up Docker secrets on EC2
+      #   uses: appleboy/ssh-action@v0.1.7
+      #   with:
+      #     host: ${{ secrets.HOST }}
+      #     username: ubuntu
+      #     key: ${{ secrets.SSH_KEY }}
+      #     script: |
+      #       set -e
+      #       # Disable strict host key checking
+      #       mkdir -p ~/.ssh
+      #       echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
 
-            # Create backend_env file
-            echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" > backend_env
-            echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> backend_env
-            echo "INIT_REFRESH_TOKEN=${{ secrets.INIT_REFRESH_TOKEN }}" >> backend_env
-            echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> backend_env
-            echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> backend_env
-            echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}" >> backend_env
-            echo -n "FIREBASE_SERVICE_ACCOUNT=" >> backend_env
-            echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | base64 -d >> backend_env
+      #       # Create backend_env file
+      #       echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" > backend_env
+      #       echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> backend_env
+      #       echo "INIT_REFRESH_TOKEN=${{ secrets.INIT_REFRESH_TOKEN }}" >> backend_env
+      #       echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> backend_env
+      #       echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> backend_env
+      #       echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}" >> backend_env
+      #       echo -n "FIREBASE_SERVICE_ACCOUNT=" >> backend_env
+      #       echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | base64 -d >> backend_env
 
-            # Transfer backend_env to EC2
-            scp -o StrictHostKeyChecking=no backend_env ubuntu@${{ secrets.HOST }}:/home/ubuntu/backend_env
+      #       # Transfer backend_env to EC2
+      #       scp -o StrictHostKeyChecking=no backend_env ubuntu@${{ secrets.HOST }}:/home/ubuntu/backend_env
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
