--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,7 +81,7 @@ jobs:
             docker stop course-swap-backend || true
             docker rm course-swap-backend || true
 
-            # Run new Image
+            # Run new Backend Image
             docker run -d -p 5000:5000 \
             -e MONGO_URI='${{ secrets.MONGO_URI }}' \
             -e APP_PASSWORD='${{ secrets.APP_PASSWORD }}' \
