--- a/course-swap-app/Dockerfile
+++ b/course-swap-app/Dockerfile
@@ -17,6 +17,7 @@ COPY . .
 RUN npm run build
 
 # Use Nginx to serve the React application
-FROM nginx:alpine
-COPY build /usr/share/nginx/html
+FROM nginx:1.19-alpine
+COPY --from=build /usr/src/app/build /usr/share/nginx/html
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
