--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,8 @@ jobs:
           script: |
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+            sudo service docker restart
+
             docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-app:${{ github.run_number }}
             docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:${{ github.run_number }}
 
