--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,15 +21,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push frontend image
+      - name: Build and push Docker images
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-app:${{ github.run_number }} ./course-swap-app
-          docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-app:${{ github.run_number }}
-
-      - name: Build and push backend image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest ./course-swap-backend
-          docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
+          docker-compose build
+          docker-compose push
 
   deploy:
     needs: build
@@ -45,29 +40,5 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_KEY }}
           script: |
-            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-            sudo service docker restart
-
-            docker network create app-network || true
-
-            docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-app:${{ github.run_number }}
-            docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
-
-            docker stop course-swap-backend || true
-            docker rm course-swap-backend || true
-
-            docker run -d --network app-network -p 5000:5000 \
-              -e MONGO_URI='${{ secrets.MONGO_URI }}' \
-              -e APP_PASSWORD='${{ secrets.APP_PASSWORD }}' \
-              -e INIT_REFRESH_TOKEN='${{ secrets.INIT_REFRESH_TOKEN }}' \
-              -e CLIENT_ID='${{ secrets.CLIENT_ID }}' \
-              -e CLIENT_SECRET='${{ secrets.CLIENT_SECRET }}' \
-              -e REDIRECT_URI='${{ secrets.REDIRECT_URI }}' \
-              -e FIREBASE_SERVICE_ACCOUNT='${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' \
-              ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
-
-            docker stop course-swap-app || true
-            docker rm course-swap-app || true
-
-            docker run -d --network app-network --name course-swap-app -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/course-swap-app:${{ github.run_number }}
+            docker-compose pull
+            docker-compose up -d
