--- a/course-swap-app/Dockerfile
+++ b/course-swap-app/Dockerfile
@@ -1,8 +1,8 @@
 # Use an official Node runtime as a parent image
-FROM node:14 as build
+FROM node:14 as build-stage
 
 # Set the working directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
@@ -17,7 +17,7 @@ COPY . .
 RUN npm run build
 
 # Use Nginx to serve the React application
-FROM nginx:1.19-alpine
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
-EXPOSE 80
+FROM nginx:stable-alpine as production-stage
+COPY --from=build-stage /app/build /usr/share/nginx/html
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
