--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            docker-compose pull
-            docker-compose up -d
+            docker pull tanmaysalunke/backend:latest
+            docker pull tanmaysalunke/frontend:latest
           debug: true
