--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,10 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            docker pull tanmaysalunke/backend:latest
-            docker pull tanmaysalunke/frontend:latest
-            docker run -d --name frontend -p 3000:80 tanmaysalunke/frontend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
+            docker stop frontend backend || true
+            docker rm frontend backend || true
+            docker run -d --name frontend -p 3000:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+            docker run -d --name backend -p 5000:80 ${{ secrets.DOCKER_USERNAME }}/backend:latest
           debug: true
