--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,12 +60,12 @@ jobs:
             docker rm frontend backend || true
             docker run -d --name frontend -p 3000:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
             docker run -d --name backend -p 5000:80 \
-              -e MONGO_URI=${{ secrets.MONGO_URI }} \
-              -e APP_PASSWORD=${{ secrets.APP_PASSWORD }} \
-              -e FIREBASE_SERVICE_ACCOUNT=${{ secrets.FIREBASE_SERVICE_ACCOUNT }} \
-              -e INIT_REFRESH_TOKEN=${{ secrets.INIT_REFRESH_TOKEN }} \
-              -e CLIENT_ID=${{ secrets.CLIENT_ID }} \
-              -e CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
-              -e REDIRECT_URI=${{ secrets.REDIRECT_URI }} \
-              ${{ secrets.DOCKER_USERNAME }}/backend:latest
+            -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+            -e APP_PASSWORD="${{ secrets.APP_PASSWORD }}" \
+            -e FIREBASE_SERVICE_ACCOUNT="${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" \
+            -e INIT_REFRESH_TOKEN="${{ secrets.INIT_REFRESH_TOKEN }}" \
+            -e CLIENT_ID="${{ secrets.CLIENT_ID }}" \
+            -e CLIENT_SECRET="${{ secrets.CLIENT_SECRET }}" \
+            -e REDIRECT_URI="${{ secrets.REDIRECT_URI }}" \
+            ${{ secrets.DOCKER_USERNAME }}/backend:latest
           debug: true
