--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
             docker run -d --name backend -p 5000:80 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
               -e APP_PASSWORD="${{ secrets.APP_PASSWORD }}" \
-              -e FIREBASE_SERVICE_ACCOUNT="${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" \
+              -e FIREBASE_SERVICE_ACCOUNT="$(echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }} | base64 --decode)" \
               -e INIT_REFRESH_TOKEN="${{ secrets.INIT_REFRESH_TOKEN }}" \
               -e CLIENT_ID="${{ secrets.CLIENT_ID }}" \
               -e CLIENT_SECRET="${{ secrets.CLIENT_SECRET }}" \
