--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,11 @@ jobs:
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           REDIRECT_URI: ${{ secrets.REDIRECT_URI }}
 
+      - name: Verify build output
+        run: |
+          docker run --rm tanmaysalunke/frontend:latest ls -l /app/build
+          docker run --rm tanmaysalunke/frontend:latest ls -l /usr/share/nginx/html
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
