--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - app-network
   frontend:
     image: tanmaysalunke/frontend:latest
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     build: 
       context: ./course-swap-app
       dockerfile: Dockerfile
