try pushing to new instance

--- a/course-swap-app/Dockerfile
+++ b/course-swap-app/Dockerfile
@@ -1,22 +1,17 @@
-# Use an official Node runtime as a parent image
+# Build stage
 FROM node:14 as build-stage
 
-# Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Install any needed packages
 RUN npm install
 
-# Bundle app source inside Docker image
 COPY . .
 
-# Build the application for production
 RUN npm run build && ls -l /app/build
 
-# Use Nginx to serve the React application
+# Production stage
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /app/build /usr/share/nginx/html
 EXPOSE 80
