check new default.conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name http://54.67.32.217/;
 
     root /usr/share/nginx/html;
     index index.html index.htm;
