--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name http://54.67.32.217/;
+    server_name 54.67.32.217;
 
     root /usr/share/nginx/html;
     index index.html index.htm;
@@ -10,11 +10,13 @@ server {
     }
 
     error_page 404 /404.html;
-    location = /40x.html {
+    location = /404.html {
+        internal;
     }
 
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
+        internal;
     }
 
     location ~ /\. {
