--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,13 +25,13 @@ services:
       context: ./course-swap-app
       dockerfile: Dockerfile
     environment:
-      - REACT_APP_FIREBASE_API_KEY
-      - REACT_APP_FIREBASE_AUTH_DOMAIN
-      - REACT_APP_FIREBASE_PROJECT_ID
-      - REACT_APP_FIREBASE_STORAGE_BUCKET
-      - REACT_APP_FIREBASE_MESSAGING_SENDER_ID
-      - REACT_APP_FIREBASE_APP_ID
-      - REACT_APP_FIREBASE_MEASUREMENT_ID
+      - REACT_APP_FIREBASE_API_KEY=${REACT_APP_FIREBASE_API_KEY}
+      - REACT_APP_FIREBASE_AUTH_DOMAIN=${REACT_APP_FIREBASE_AUTH_DOMAIN}
+      - REACT_APP_FIREBASE_PROJECT_ID=${REACT_APP_FIREBASE_PROJECT_ID}
+      - REACT_APP_FIREBASE_STORAGE_BUCKET=${REACT_APP_FIREBASE_STORAGE_BUCKET}
+      - REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${REACT_APP_FIREBASE_MESSAGING_SENDER_ID}
+      - REACT_APP_FIREBASE_APP_ID=${REACT_APP_FIREBASE_APP_ID}
+      - REACT_APP_FIREBASE_MEASUREMENT_ID=${REACT_APP_FIREBASE_MEASUREMENT_ID}
     ports:
       - "80:80"
     networks:
