--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,15 +65,7 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
             docker stop frontend backend || true
             docker rm frontend backend || true
-            docker run -d --name frontend -p 80:80 \
-              -e  REACT_APP_FIREBASE_API_KEY="${{secrets.REACT_APP_FIREBASE_API_KEY}}" \
-              -e  REACT_APP_FIREBASE_APP_ID="${{secrets.REACT_APP_FIREBASE_APP_ID}}" \
-              -e  REACT_APP_FIREBASE_AUTH_DOMAIN="${{secrets.REACT_APP_FIREBASE_AUTH_DOMAIN}}" \
-              -e  REACT_APP_FIREBASE_MEASUREMENT_ID="${{secrets.REACT_APP_FIREBASE_MEASUREMENT_ID}}" \
-              -e  REACT_APP_FIREBASE_MESSAGING_SENDER_ID="${{secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID}}" \
-              -e  REACT_APP_FIREBASE_PROJECT_ID="${{secrets.REACT_APP_FIREBASE_PROJECT_ID}}" \
-              -e  REACT_APP_FIREBASE_STORAGE_BUCKET="${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}}" \
-              ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+            docker run -d --name frontend -p 80:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
 
             docker run -d --name backend -p 5000:80 \
