--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build and push Docker images
         run: |
-          docker-compose build
+          docker-compose build --no-cache
           docker-compose push
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }}
