--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /socket.io/ {
+        proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
+
+
     error_page 404 /404.html;
     location = /404.html {
         internal;
