--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,10 +68,10 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
             docker stop frontend backend || true
             docker rm frontend backend || true
-            docker run -d --name frontend -p 80:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+            docker run -d --name frontend --network my-network -p 80:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
 
-            docker run -d --name backend -p 5000:5000 \
+            docker run -d --name backend --network my-network -p 5000:5000 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
               -e APP_PASSWORD="${{ secrets.APP_PASSWORD }}" \
               -e FIREBASE_SERVICE_ACCOUNT="$(echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }} | base64 --decode)" \
