--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,9 +54,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Create Docker network
-        run: docker network create my-network || true
-
       - name: Deploy with SSH (Debug Enabled)
         uses: appleboy/ssh-action@v0.1.5
         with:
@@ -68,8 +65,8 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
             docker stop frontend backend || true
             docker rm frontend backend || true
+            docker network create my-network || true
             docker run -d --name frontend --network my-network -p 80:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
-
 
             docker run -d --name backend --network my-network -p 5000:5000 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
