--- a/course-swap-app/Dockerfile
+++ b/course-swap-app/Dockerfile
@@ -15,6 +15,7 @@ ARG REACT_APP_FIREBASE_STORAGE_BUCKET
 ARG REACT_APP_FIREBASE_MESSAGING_SENDER_ID
 ARG REACT_APP_FIREBASE_APP_ID
 ARG REACT_APP_FIREBASE_MEASUREMENT_ID
+ARG REACT_APP_API_BASE_URL
 
 ENV REACT_APP_FIREBASE_API_KEY=$REACT_APP_FIREBASE_API_KEY
 ENV REACT_APP_FIREBASE_AUTH_DOMAIN=$REACT_APP_FIREBASE_AUTH_DOMAIN
@@ -23,6 +24,7 @@ ENV REACT_APP_FIREBASE_STORAGE_BUCKET=$REACT_APP_FIREBASE_STORAGE_BUCKET
 ENV REACT_APP_FIREBASE_MESSAGING_SENDER_ID=$REACT_APP_FIREBASE_MESSAGING_SENDER_ID
 ENV REACT_APP_FIREBASE_APP_ID=$REACT_APP_FIREBASE_APP_ID
 ENV REACT_APP_FIREBASE_MEASUREMENT_ID=$REACT_APP_FIREBASE_MEASUREMENT_ID
+ENV REACT_APP_API_BASE_URL=http://54.67.32.217:5000/api
 
 COPY . .
 
