--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -26,13 +26,14 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://localhost:5000;
+        proxy_pass http://54.67.32.217:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
 
