--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,15 +5,15 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # location / {
-    #     proxy_pass http://backend:5000;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    # }
+    location / {
+        proxy_pass http://54.67.32.217:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     # Proxy API requests to the backend
     location /api/ {
