--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,6 +13,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Proxy API requests to the backend
@@ -26,7 +27,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://54.67.32.217:5000;
+        proxy_pass http://54.67.32.217:5000;  # Ensure backend server handles socket.io
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -35,7 +36,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
 
     error_page 404 /404.html;
     location = /404.html {
