--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,6 +7,8 @@ server {
 
     location / {
         proxy_pass http://54.67.32.217:5000;
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
