--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,7 @@ server {
     index index.html index.htm;
 
     location / {
+        try_files $uri $uri/ /index.html;
         proxy_pass http://54.67.32.217:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
