--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,8 @@ server {
     index index.html index.htm;
 
     location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
         proxy_pass http://54.67.32.217:80;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
