check if making docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
   nginx:
     build:
       context: ./nginx
+    image: 
+      - tanmaysalunke/nginx-custom:latest
     ports:
       - "80:80"
     volumes:
