cat original file

--- a/course-swap-app/Dockerfile
+++ b/course-swap-app/Dockerfile
@@ -33,6 +33,6 @@ RUN npm run build && ls -l /app/build
 # Production stage
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /app/build /usr/share/nginx/html
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+# COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
